sample-yaml/qm-to-qm/mq-receiver-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: receiver-qm-to-qm-traffic
  namespace: receiver-mq
spec:
# QM1.TO.QM2
  host: qm12e-to2e-qm2.chl.mq.ibm.com
  to:
    kind: Service
    name: nativeha-receiver-qm-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
