sample-yaml/qm-to-qm/mq-sender-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sender-qm-to-qm-traffic
  namespace: sender-mq
spec:
# SENDER.EXT.CONN
  host: sender2e-ext2e-conn.chl.mq.ibm.com
  to:
    kind: Service
    name: nativeha-sender-qm-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
